--- a/style/main.css
+++ b/style/main.css
@@ -6,10 +6,10 @@
 }
 *{
     box-sizing: border-box;
-}
-html{
     font-family: 'Rubik', sans-serif;
+
 }
+
 
 .header{
     
@@ -65,6 +65,7 @@ html{
     color:var(--primary-text);
     max-width: 200px;
     text-align: center;
+    line-height: 40px;
     
 
 }
@@ -82,6 +83,10 @@ html{
        .menu{
            text-align: right;
            padding-bottom: 0;
+       }
+       .title{
+           font-size: 40px;
+           line-height: 50px;
        }
 
         
