--- a/style/main.css
+++ b/style/main.css
@@ -1,95 +1,77 @@
-:root{
-    --primary-text: #ffffff;
-    --secondary-text: #4a4a4a;
-    --primary-bg: #3CDBC0;
-   
-
+:root {
+  --primary-text: #ffffff;
+  --secondary-text: #4a4a4a;
+  --primary-bg: #3cdbc0;
 }
-*{
-    box-sizing: border-box;
-    }
-html{
-     font-family: 'Rubik', sans-serif;
+* {
+  box-sizing: border-box;
+}
+html {
+  font-family: 'Rubik', sans-serif;
 }
 
-.header{
-    
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    background-color: white;
-
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background-color: white;
+  padding-bottom: 13px;
 }
 
-.logo{
-    width: 155px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.logo {
+  width: 155px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-
-
-
-.menu{
-    width: 155px;
-    padding-bottom: 13px;
+.menu {
+  width: 155px;
+  display: flex;
 }
 
-.menu-item{
-    font-size: 16px;
-    color:var(--secondary-text);
-    display: inline;
-    padding-right: 20px;   
+.menu-item {
+  font-size: 16px;
+  color: var(--secondary-text);
+  padding: 10px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
-.menu-item-last{
-    padding-right: 0;
+.main {
+  background-color: var(--primary-bg);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.main{
-    background-color: var(--primary-bg);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
- 
-    
+.title {
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--primary-text);
+  max-width: 200px;
+  text-align: center;
+  line-height: 40px;
+  text-transform: capitalize;
 }
 
-.title{
-    font-size: 30px;
-    font-weight: 700;
-    color:var(--primary-text);
-    max-width: 200px;
-    text-align: center;
-    line-height: 40px;
-    
-
-}
-
-@media screen and (min-width:768px) {
-    .header{
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 20px 30px;
-
-        }
-        .logo{
-            padding: 0;
-        }
-       .menu{
-           text-align: right;
-           padding-bottom: 0;
-       }
-       .title{
-           font-size: 40px;
-           line-height: 50px;
-       }
-
-        
-    
+@media screen and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 30px;
+  }
+  .logo {
+    padding: 0;
+  }
+  .menu-item {
+    text-align: right;
+  }
+  .title {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
